@@ -19,6 +19,9 @@ Version 2.2.2 - Whatever comes next.
 		* Fix NULL pointer dereference
 		* Fix for configure not using --with-geo-ip value in library check
 
+	Greek:
+		* Part number is now an extra column in the download list
+
 	MalaPraxis:
 		* Remap colours on Windows
 		* Add resources
